--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-
     Copyright (C) 2010-2011 eBusiness Information, Excilys Group
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not
@@ -14,7 +13,6 @@
     WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
     License for the specific language governing permissions and limitations under
     the License.
-
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.googlecode.androidannotations.test15"
@@ -25,10 +23,10 @@
         android:name="com.googlecode.androidannotations.test15.roboguice.SampleRoboApplication_"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-        
-        <activity android:name=".CustomFrameLayoutActivity_" >
+        <activity android:name="com.googlecode.androidannotations.test15.eviewgroup.CustomFrameLayoutActivity_" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -67,7 +65,6 @@
         <service
             android:name="com.googlecode.androidannotations.test15.eservice.MyService_"
             exported="false" />
-
     </application>
 
 </manifest>
