--- a/AndroidAnnotations/functional-test-1-5-tests/.settings/org.eclipse.jdt.core.prefs
+++ b/AndroidAnnotations/functional-test-1-5-tests/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,6 @@
-#Tue Feb 21 19:52:53 BRST 2012
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+#Thu Jan 19 14:10:02 CET 2012
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.source=1.6
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.6
