GreenDroid integration: Checking through whole type hierarchy, no more checks for setActionBarContent() methods, adding unit tests, a few refactorings. #119

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -58,7 +58,7 @@
         <activity android:name="com.googlecode.androidannotations.test15.rest.MyServiceActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.instancestate.SaveInstanceStateActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.afterinject.AfterInjectActivity_" />
-
+		<activity android:name="com.googlecode.androidannotations.test15.greendroid.MyGreenDroidActivity_" />
         <receiver android:name="com.googlecode.androidannotations.test15.ereceiver.MyReceiver_" />
 
         <provider
