First implementation of @TextChange, @BeforeTextChange and @AfterTextChange annotations. (for more informations see #120)

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".res.ResActivity_" />
         <activity android:name=".ThreadActivity_" />
         <activity android:name=".TracedActivity_" />
+        <activity android:name=".TextWatchedActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.menu.OptionsMenuActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.NoTitleFullscreenActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.ExtendingActivity_" />
