--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-
     Copyright (C) 2010-2011 eBusiness Information, Excilys Group
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not
@@ -14,7 +13,6 @@
     WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
     License for the specific language governing permissions and limitations under
     the License.
-
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.googlecode.androidannotations.test15"
@@ -59,8 +57,10 @@
         <activity android:name="com.googlecode.androidannotations.test15.rest.MyServiceActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.instancestate.SaveInstanceStateActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.afterinject.AfterInjectActivity_" />
-		<activity android:name="com.googlecode.androidannotations.test15.greendroid.MyGreenDroidActivity_" />
-		<activity android:name="com.googlecode.androidannotations.test15.nonconfiguration.NonConfigurationActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.greendroid.MyGreenDroidActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.nonconfiguration.NonConfigurationActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.sherlock.MySherlockActivity_" />
+
         <receiver android:name="com.googlecode.androidannotations.test15.ereceiver.MyReceiver_" />
 
         <provider
