--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -19,7 +19,7 @@
     android:versionCode="1"
     android:versionName="2.1-SNAPSHOT" >
 
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="8" />
     
     <application
         android:name="com.googlecode.androidannotations.test15.roboguice.SampleRoboApplication_"
@@ -62,6 +62,7 @@
         <activity android:name="com.googlecode.androidannotations.test15.greendroid.MyGreenDroidActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.nonconfiguration.NonConfigurationActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.sherlock.MySherlockActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.efragment.MyFragmentActivity_" />
 
         <receiver android:name="com.googlecode.androidannotations.test15.ereceiver.MyReceiver_" />
 
