--- a/AndroidAnnotations/functional-test-1-5-tests/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5-tests/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.pivotallabs</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>1.0-RC1</version>
+			<version>1.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
