--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity android:name=".ThreadActivity_" />
         <activity android:name=".TracedActivity_" />
         <activity android:name=".TextWatchedActivity_" />
+        <activity android:name=".ormlite.OrmLiteActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.menu.OptionsMenuActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.NoTitleFullscreenActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.ExtendingActivity_" />
