Update athomas.nc twitter account

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -43,7 +43,7 @@
 			<id>athomas.nc</id>
 			<name>Alexandre Thomas</name>
 			<email>athomas.nc@gmail.com</email>
-			<url>http://twitter.com/twikeuk</url>
+			<url>http://twitter.com/AleksThomas</url>
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
