Added some tests for @ProgressChange

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity android:name="com.googlecode.androidannotations.test15.efragment.MyFragmentActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.afterviews.AfterViewsActivity_" />
         <activity android:name=".SSLConnection_" />
+		<activity android:name=".SeekBarChangeListenedActivity_" />
 
         <receiver android:name="com.googlecode.androidannotations.test15.ereceiver.MyReceiver_" />
 
