Implemented the @OnResult annotation behavior.

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name="com.googlecode.androidannotations.test15.afterviews.AfterViewsActivity_" />
         <activity android:name=".SSLConnection_" />
         <activity android:name="com.googlecode.androidannotations.test15.SeekBarChangeListenedActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.AwaitingResultActivity_" />
 
         <receiver android:name="com.googlecode.androidannotations.test15.ereceiver.MyReceiver_" />
 
