--- a/AndroidAnnotations/androidannotations/.settings/org.eclipse.core.resources.prefs
+++ b/AndroidAnnotations/androidannotations/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,6 @@
-#Thu Mar 15 10:12:07 CET 2012
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/rebel.xml=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
