--- a/AndroidAnnotations/androidannotations/.settings/org.eclipse.core.resources.prefs
+++ b/AndroidAnnotations/androidannotations/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/resources/rebel.xml=UTF-8
 encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
