--- a/AndroidAnnotations/androidannotations-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-api/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
-		<groupId>com.googlecode.androidannotations</groupId>
+		<groupId>org.androidannotations</groupId>
 		<version>2.7-SNAPSHOT</version>
 	</parent>
 
