--- a/AndroidAnnotations/androidannotations-with-codemodel/pom.xml
+++ b/AndroidAnnotations/androidannotations-with-codemodel/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
-		<groupId>com.googlecode.androidannotations</groupId>
+		<groupId>org.androidannotations</groupId>
 		<version>2.7-SNAPSHOT</version>
 	</parent>
 
@@ -17,7 +17,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.googlecode.androidannotations</groupId>
+			<groupId>org.androidannotations</groupId>
 			<artifactId>androidannotations</artifactId>
 		</dependency>
 	</dependencies>
