--- a/AndroidAnnotations/functional-test-1-5-tests/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5-tests/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
-		<groupId>com.googlecode.androidannotations</groupId>
+		<groupId>org.androidannotations</groupId>
 		<version>2.7-SNAPSHOT</version>
 	</parent>
 
@@ -14,7 +14,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.googlecode.androidannotations</groupId>
+			<groupId>org.androidannotations</groupId>
 			<artifactId>functional-test-1-5</artifactId>
 		</dependency>
 		<dependency>
