--- a/AndroidAnnotations/androidannotations-bundle/pom.xml
+++ b/AndroidAnnotations/androidannotations-bundle/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
 		<groupId>com.googlecode.androidannotations</groupId>
-		<version>2.7</version>
+		<version>3.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>androidannotations-bundle</artifactId>
