Updated pom informations about me.

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -41,8 +41,9 @@
 		</developer>
 		<developer>
 			<id>mat.boniface</id>
-			<name>Mathieu Boniface	</name>
+			<name>Mathieu Boniface</name>
 			<email>mat.boniface@gmail.com</email>
+			<url>http://twitter.com/matboniface</url>
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
