Move parameter checkers form ValidatorHelper to separate class. Add generation test and propper validation for @FocusChange.

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".EmptyActivityWithoutLayout_" />
         <activity android:name=".ViewsInjectedActivity_" />
         <activity android:name=".ClicksHandledActivity_" />
+        <activity android:name=".FocusChangeHandledActivity_" />
         <activity android:name=".LongClicksHandledActivity_" />
         <activity android:name=".TouchesHandledActivity_" />
         <activity android:name=".ItemClicksHandledActivity_" />
