--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -58,6 +58,7 @@
         <activity android:name=".TextWatchedActivity_" />
         <activity android:name=".ormlite.OrmLiteActivity_" />
         <activity android:name="org.androidannotations.test15.menu.OptionsMenuActivity_" />
+        <activity android:name="org.androidannotations.test15.menu.OptionsMenuSubActivity_" />
         <activity android:name="org.androidannotations.test15.NoTitleFullscreenActivity_" />
         <activity android:name="org.androidannotations.test15.ExtendingActivity_" />
         <activity android:name="org.androidannotations.test15.ebean.BeanInjectedActivity_" />
