--- a/AndroidAnnotations/androidannotations-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
 		<groupId>com.googlecode.androidannotations</groupId>
-		<version>3.0-SNAPSHOT</version>
+		<version>2.7.1</version>
 	</parent>
 
 	<artifactId>androidannotations-api</artifactId>
