--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.googlecode.androidannotations</groupId>
 	<artifactId>androidannotations-parent</artifactId>
-	<version>3.0-SNAPSHOT</version>
+	<version>2.7.1</version>
 	<packaging>pom</packaging>
 
 	<name>AndroidAnnotations Parent</name>
