Updated commiter information

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -65,7 +65,8 @@
 		<developer>
 			<id>jzapata</id>
 			<name>Joan Zapata</name>
-			<email>jzapata@excilys.com</email>
+			<email>zapata.joan@gmail.com</email>
+			<url>http://joanzapata.com</url>
 			<organization>eBusiness Information</organization>
 			<organizationUrl>http://www.ebusinessinformation.fr</organizationUrl>
 			<roles>
