--- a/examples/RoboGuiceExample/AndroidManifest.xml
+++ b/examples/RoboGuiceExample/AndroidManifest.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="1.0"
-      package="com.googlecode.androidannotations.roboguiceexample">
+    package="com.googlecode.androidannotations.roboguiceexample"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:maxSdkVersion="17"
+        android:minSdkVersion="3"
+        android:targetSdkVersion="17" />
+
     <application
-    	android:name=".AstroApplication"
-    	android:icon="@drawable/icon"
-    	android:label="@string/app_name">
+        android:name=".AstroApplication"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
         <activity
-        	android:name=".AstroGirl_"
-            android:label="@string/app_name">
+            android:name=".AstroGirl_"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-    <uses-sdk android:minSdkVersion="3" />
 
-</manifest> 
+</manifest>
