--- a/examples/gradle/AndroidManifest.xml
+++ b/examples/gradle/AndroidManifest.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.googlecode.androidannotations.gradle"
-          android:versionCode="1"
-          android:versionName="1.0.0.SNAPSHOT">
-    <application android:icon="@drawable/icon"
-                 android:label="@string/app_name">
-        <activity android:name=".activity.HelloAndroidActivity_">
+    package="com.googlecode.androidannotations.gradle"
+    android:versionCode="1"
+    android:versionName="1.0.0.SNAPSHOT" >
+
+    <uses-sdk
+        android:maxSdkVersion="17"
+        android:minSdkVersion="3"
+        android:targetSdkVersion="17" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity android:name=".activity.HelloAndroidActivity_" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-</manifest>
 
+</manifest>
