--- a/examples/RoboGuiceExample/.classpath
+++ b/examples/RoboGuiceExample/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/guice-2.0-no_aop.jar"/>
-	<classpathentry kind="lib" path="lib/roboguice-1.1.1.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/androidannotations-api/target/androidannotations-api-3.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="/androidannotations-api/target/androidannotations-api-3.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guice-2.0-no_aop.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/roboguice-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
