--- a/examples/RoboGuiceExample/AndroidManifest.xml
+++ b/examples/RoboGuiceExample/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SimpleActivity_" />
     </application>
 
 </manifest>
