--- a/AndroidAnnotations/androidannotations-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-api/pom.xml
@@ -29,6 +29,7 @@
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-rest-template</artifactId>
 			<version>1.0.0.RELEASE</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
