Fix API properties loading. It failed to load the second Eclipse for test projects

--- a/AndroidAnnotations/androidannotations-api/build.properties
+++ b/AndroidAnnotations/androidannotations-api/build.properties
@@ -15,6 +15,7 @@
 #
 
 source.. = src/main/java/,\
+           src/main/resources/,\
            src/test/java/,\
            src/main/eclipse/
 bin.includes = META-INF/,\
