--- a/examples/HelloWorldEclipse/.gitignore
+++ b/examples/HelloWorldEclipse/.gitignore
@@ -1,7 +1,20 @@
-bin
+# Maven
+target
+
+#Android
 gen
+bin
+
+# Eclipse
+.classpath
 .apt_generated
-*.iml
+.settings
+.project
+org.eclipse.jdt.core.prefs
+org.maven.ide.eclipse.prefs
+
+# Idea
 *.ipr
 *.iws
+*.iml
 *.idea
