--- a/examples/RoboGuiceExample/.gitignore
+++ b/examples/RoboGuiceExample/.gitignore
@@ -1,6 +1,19 @@
-bin
+# Maven
+target
+
+#Android
 gen
+bin
+
+# Eclipse
+.classpath
 .apt_generated
+.settings
+.project
+org.eclipse.jdt.core.prefs
+org.maven.ide.eclipse.prefs
+
+# Idea
 *.ipr
 *.iws
 *.iml
