Add a test case. Register activity in AndroidManifest

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity android:name="org.androidannotations.test15.AwaitingResultActivity_" />
         <activity android:name=".HierarchyViewerActivity_" />
         <activity android:name="org.androidannotations.test15.CustomTitleActivity_" />
+        <activity android:name=".ActivityWithGenerics_" />
 
         <receiver android:name="org.androidannotations.test15.ereceiver.MyReceiver_" />
 
