Add functional test classes

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".TracedActivity_" />
         <activity android:name=".TextWatchedActivity_" />
         <activity android:name=".ormlite.OrmLiteActivity_" />
+        <activity android:name=".receiver.ActivityWithReceiver_" />
         <activity android:name="org.androidannotations.test15.menu.OptionsMenuActivity_" />
         <activity android:name="org.androidannotations.test15.menu.OptionsMenuSubActivity_" />
         <activity android:name="org.androidannotations.test15.NoTitleFullscreenActivity_" />
@@ -103,6 +104,9 @@
         <service
             android:name="org.androidannotations.test15.eintentservice.IntentServiceHandledAction_"
             android:exported="false" />
+        <service
+                android:name="org.androidannotations.test15.receiver.ServiceWithReceiver_"
+                android:exported="false" />
     </application>
 
 </manifest>
