--- a/AndroidAnnotations/functional-test-1-5-tests/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5-tests/pom.xml
@@ -46,6 +46,12 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>net.sf.kxml</groupId>
+		    <artifactId>kxml2</artifactId>
+		    <version>2.3.0</version>
+		    <scope>test</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>bouncycastle</groupId>
