--- a/AndroidAnnotations/functional-test-1-5-tests/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5-tests/pom.xml
@@ -24,9 +24,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.pivotallabs</groupId>
+			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>1.1</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
