--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.androidannotations</groupId>
 	<artifactId>androidannotations-parent</artifactId>
-	<version>3.1-SNAPSHOT</version>
+	<version>3.1-TOMREAY-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>AndroidAnnotations Parent</name>
@@ -287,9 +287,9 @@
 	</build>
 
 	<scm>
-		<connection>scm:git:git@github.com:excilys/androidannotations.git</connection>
-		<developerConnection>scm:git:git@github.com:excilys/androidannotations.git</developerConnection>
-		<url>https://github.com/excilys/androidannotations</url>
+		<connection>scm:git:git@github.com:tomreay/androidannotations.git</connection>
+		<developerConnection>scm:git:git@github.com:tomreay/androidannotations.git</developerConnection>
+		<url>https://github.com/tomreay/androidannotations</url>
 	</scm>
 
 	<profiles>
