--- a/AndroidAnnotations/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.androidannotations</groupId>
         <artifactId>androidannotations-parent</artifactId>
-        <version>3.1-TOMREAY-SNAPSHOT</version>
+        <version>3.1-TOMREAY</version>
     </parent>
 
     <artifactId>androidannotations</artifactId>
