--- a/AndroidAnnotations/functional-test-1-5-tests/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5-tests/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>3.1-TOMREAY-SNAPSHOT</version>
+		<version>3.1-TOMREAY</version>
 	</parent>
 
 	<artifactId>functional-test-1-5-tests</artifactId>
