--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.androidannotations</groupId>
 	<artifactId>androidannotations-parent</artifactId>
-	<version>3.1-TOMREAY</version>
+	<version>3.2-TOMREAY-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>AndroidAnnotations Parent</name>
@@ -284,7 +284,7 @@
 		<connection>scm:git:git@github.com:tomreay/androidannotations.git</connection>
 		<developerConnection>scm:git:git@github.com:tomreay/androidannotations.git</developerConnection>
 		<url>https://github.com/tomreay/androidannotations</url>
-	  <tag>androidannotations-parent-3.1-TOMREAY</tag>
+	  <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
