Updating example project
The example project now can be built with maven 3.x.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ android:
     - android-14
 script:
   - mvn -f AndroidAnnotations/pom.xml install
-  - mvn -f examples/maveneclipse/pom.xml compile
+  - mvn -f examples/maveneclipse/pom.xml install
