enable processing of @Trace for functional tests
this involves upgrading the version of maven-compiler-plugin as mentioned here: https://github.com/excilys/androidannotations/pull/1103#issuecomment-53163297

--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -121,6 +121,11 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<showWarnings>true</showWarnings>
+					<compilerArgs>
+						<arg>-Atrace=true</arg>
+						<arg>-AlogLevel=ERROR</arg>
+						<arg>-AlogFile=${project.build.directory}/functional-test.log</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
